@@ -1,5 +1,13 @@
 2012-09-22  WOnder93  <omosnacek@gmail.com>
 
+	* sk.po:
+	* cs.po:
+	* en.po:
+	* messages.po:
+	  Updated translations.
+
+2012-09-22  WOnder93  <omosnacek@gmail.com>
+
 	* .:
 	* sk.po:
 	* en.po:
